# ray-tracer

./: .gitignore  CMakeLists.txt  README.md
include/: matrix.h  tuple.h
matrix/: matrix.cpp  matrix.h
ray/: ray.cpp  ray.h
src/: clock.cpp  projectile.cpp  sphere.cpp  tuple.cpp
tests/: test_matrix.cpp  test_rays.cpp  test_tuple.cpp
tuple/: tuple.cpp  tuple.h
